--- a/css/pino.css
+++ b/css/pino.css
@@ -51,9 +51,60 @@
     background:#fff;
 }
 
+.topnav{
+  overflow: hidden;
+}
+
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 20px 4px;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.box {
+  width: 100vw;
+  display: flex; /*xq?*/
+  /*background-color: red;*/
+}
+
+.box div {
+  width: 40vw;
+  height: 60px;
+  /*background-color: brown;*/
+}
+
+.pinotitulo {
+  width: 50vw;
+  height: 50px;
+  /*background-color: green;*/
+}
+
 .pinofoot{
-  height: 70px;
+  height: 60px;
   margin-left: -10px;
   margin-right: -10px;
+  padding-top: 10px;
   background-color: white;
+  text-align: center;
+  font-family: Tahoma, Geneva, sans-serif;
+}
+
+/*Letras*/
+
+.pinofondoblanco{
+  font-size: 30px;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: right;
+  padding-top: 160px;
+  padding-right: 20px;
+}
+
+.pinofondoblancochico{
+  font-size: 20px;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: right;
+  padding-right: 20px;
 }
