--- a/css/pino.css
+++ b/css/pino.css
@@ -11,6 +11,7 @@
   background-color: #2d3d66;
   margin-left: -10px;
   margin-right: -10px;
+  padding-top: 10px;
 }
 
 .pinorect2{
@@ -18,6 +19,7 @@
   background-color: #2d3d77;
   margin-left: -10px;
   margin-right: -10px;
+  padding-top: 10px;
 }
 
 .pinorect3{
@@ -25,6 +27,7 @@
   background-color: #2d3d88;
   margin-left: -10px;
   margin-right: -10px;
+  padding-top: 10px;
 }
 
 .contrapoligono-pino{
@@ -92,6 +95,10 @@
   font-family: Tahoma, Geneva, sans-serif;
 }
 
+.boxder{
+  width: 60vw;
+}
+
 /*Letras*/
 
 .pinofondoblanco{
@@ -107,4 +114,40 @@
   font-family: Tahoma, Geneva, sans-serif;
   text-align: right;
   padding-right: 20px;
+}
+
+.pinofondoazul{
+  width: 60vw;
+  font-size: 40px;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: left;
+  padding-left: 20px;
+  color: white;
+}
+
+.pinofondoazulchico{
+  width: 60vw;
+  font-size: 20px;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: left;
+  padding-left: 20px;
+  color: white;
+}
+
+.pinofondoazulder{
+  width: 96vw;
+  font-size: 40px;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: right;
+  padding-right: 30px;
+  color: white;
+}
+
+.pinofondoazulchicoder{
+  width: 96vw;
+  font-size: 20px;
+  font-family: Tahoma, Geneva, sans-serif;
+  text-align: right;
+  /*padding-right: 30px;*/
+  color: white;
 }
