--- a/css/pino.css
+++ b/css/pino.css
@@ -101,6 +101,15 @@
 
 /*Letras*/
 
+.pinofontmain{
+  padding-top: 100px;
+  padding-left: 30px;
+  width: 60vw;
+  font-size: 40px;
+  font-family: Verdana;
+  color: white;
+}
+
 .pinofondoblanco{
   font-size: 30px;
   font-family: Tahoma, Geneva, sans-serif;
@@ -121,7 +130,7 @@
   font-size: 40px;
   font-family: Tahoma, Geneva, sans-serif;
   text-align: left;
-  padding-left: 20px;
+  padding-left: 30px;
   color: white;
 }
 
@@ -130,7 +139,7 @@
   font-size: 20px;
   font-family: Tahoma, Geneva, sans-serif;
   text-align: left;
-  padding-left: 20px;
+  padding-left: 30px;
   color: white;
 }
 
