--- a/css/pino.css
+++ b/css/pino.css
@@ -3,56 +3,66 @@
 }
 
 .pinotransp{
-  height: 300px;
+  height: 500px;
 }
+
+.pinotransp__button{
+  width: 160px;
+  background-color: aliceblue;
+  padding: 15px 25px;
+  color: #4267b2;
+  display: block;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
 
 .pinorect1{
   height: 500px;
   background-color: #2d3d66;
-  margin-left: -10px;
-  margin-right: -10px;
-  padding-top: 10px;
+  padding-top: 50px;
 }
 
 .pinorect2{
   height: 500px;
   background-color: #2d3d77;
-  margin-left: -10px;
-  margin-right: -10px;
   padding-top: 10px;
 }
 
 .pinorect3{
   height: 500px;
   background-color: #2d3d88;
-  margin-left: -10px;
-  margin-right: -10px;
   padding-top: 10px;
 }
 
 .contrapoligono-pino{
-  height: 700px;
+  height: 284px;/*700px;*/
   margin-left: -10px;
-  margin-right: -10px;
-  background-color: #dddddd;
+  /*margin-right: -10px;*/
+  background-color: #fff; /*#dddddd;*/
   /*clip-path:polygon(0 0,50% 0,100% 0%,0 100%);*/
   clip-path:polygon(0 17vw,100% 0,100% 700px,0 700px);
+  /*position: sticky;*/
+  left:0;
+  top:0;
+  transition:background 0.5s ease;
+  color: white;
+  padding: 5px;
+  font-family: Tahoma, Geneva, sans-serif;
 }
 
-.pinohead{
-    background:rgba(255,255,255,0.0);
-    position: sticky;
-    left:0;
-    top:0;
-    transition:background 0.5s ease;
-    color: white;
-    margin-left: 25px;
-    padding: 5px;
-    font-family: Tahoma, Geneva, sans-serif;
+.itemenu{
+  padding-left: 25px;
 }
 
 .itemenu:hover{
   background-color: #112240;
+}
+
+.pinohead{
+  border-bottom: 1px solid rgba(255,255,255,.1);
+  position: fixed;
+  width: 100%;
 }
 
 .pinohead-sticky{
@@ -61,21 +71,24 @@
 
 .topnav{
   overflow: hidden;
+  width: 30%;
+  padding-top: 20px;
 }
 
 .topnav a {
   float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 20px 4px;
+  /*padding: 20px 4px;*/
   text-decoration: none;
   font-size: 15px;
 }
 
 .box {
-  width: 100vw;
   display: flex; /*xq?*/
+  justify-content: space-around;
   /*background-color: red;*/
+
 }
 
 .box div {
@@ -85,15 +98,16 @@
 }
 
 .pinotitulo {
-  width: 50vw;
+ /* width: 50vw;*/
   height: 50px;
+  color: aliceblue;
+  padding-top: 20px;
+  width: 40%;
   /*background-color: green;*/
 }
 
 .pinofoot{
   height: 60px;
-  margin-left: -10px;
-  margin-right: -10px;
   padding-top: 10px;
   background-color: white;
   text-align: center;
@@ -107,7 +121,7 @@
 /*Letras*/
 
 .pinofontmain{
-  padding-top: 100px;
+  padding-top: 200px;
   padding-left: 30px;
   width: 60vw;
   font-size: 40px;
