--- a/css/pino.css
+++ b/css/pino.css
@@ -117,9 +117,10 @@
   padding-top: 200px;
   padding-left: 30px;
   width: 60vw;
-  font-size: 40px;
+  font-size: 3.3em;
   font-family: Verdana;
   color: white;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .pinofondoblanco{
@@ -175,6 +176,7 @@
 @media screen and (max-width: 1200px){
   .pinotransp{
     height: 500px;
+    padding-left: 50px;
   }
 }
 
