--- a/css/pino.css
+++ b/css/pino.css
@@ -47,9 +47,10 @@
 }
 
 .pinorect2{
-  height: 500px;
-  background-color: #2d3d77;
-  padding-top: 10px;
+  height: 900px;
+  background-color: #171d40;
+  padding-top: 50px;
+  padding-left: 100px;
 }
 
 .pinorect3{
@@ -192,12 +193,38 @@
   text-align: left;
 }
 
-.pinofondoazulchicoder{
-  width: 96vw;
-  font-size: 20px;
+.contenedorpinocelda{
+  height: 900px;
+  width: 300px;
+}
+
+.pinocelda{
+  background-color: #171d40;
+  height: 200px;
+  width: 250px;
+  float: left;
+  padding: 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
   font-family: Tahoma, Geneva, sans-serif;
-  text-align: right;
+}
+
+.pinoceldafont1{
+  font-size: 10px;
   color: white;
+  font-family: 'Quicksand', sans-serif;
+  text-align: left;
+  font-size: 40px;
+  padding-bottom: 10px;
+}
+
+.pinoceldafont2{
+  font-size: 10px;
+  color: white;
+  font-family: 'Quicksand', sans-serif;
+  text-align: left;
+  font-size: 20px;
+  padding-top: 10px;
 }
 /*
 @media screen and (max-width: 1200px){
@@ -255,6 +282,15 @@
     height: 600px;
   }
 
+  .contenedorpinocelda{
+    height: 900px;
+    width: 300px;
+  }
+
+  .pinorect2{
+    height: 900px;
+  }
+
 }
 
 @media screen and (min-width: 780px) {
@@ -306,6 +342,15 @@
   .pinocuad2{
     height: 400px;
   }
+
+  .contenedorpinocelda{
+    height: 500px;
+    width: 530px;
+  }
+
+  .pinorect2{
+    height: 500px;
+  }
 }
 
 
@@ -348,5 +393,14 @@
 
   .pinocuad2{
     height: 400px;
+  }
+
+  .contenedorpinocelda{
+    height: 500px;
+    width: 530px;
+  }
+
+  .pinorect2{
+    height: 500px;
   }
 }
