footer, terminada la estructura y estilos

--- a/css/pino.css
+++ b/css/pino.css
@@ -123,14 +123,14 @@
   border-bottom: 1px solid rgba(255,255,255,.1);
   font-family: 'Quicksand', sans-serif;
 }
-
+/*
 .pinofoot{
   height: 60px;
   padding-top: 10px;
   background-color: white;
   text-align: center;
   font-family: Tahoma, Geneva, sans-serif;
-}
+}*/
 
 .boxder{
   width: 60vw;
