--- a/css/pino.css
+++ b/css/pino.css
@@ -202,7 +202,7 @@
 .contenedorpinoceldader{
   height: 200px;
   width: 150px;
-  float: left;
+  float: right;
 }
 
 .pinocelda{
@@ -220,8 +220,8 @@
   background-color: #171d40;
   height: 50px;
   width: 50px;
-  float: right;
-  padding: 20px;
+  float: left;
+  padding-right: 20px;
   margin-left: 10px;
   margin-bottom: 10px;
   font-family: Tahoma, Geneva, sans-serif;
@@ -304,13 +304,17 @@
 
   .contenedorpinocelda{
     height: 900px;
-    width: 300px;
+    width: 450px;
     float: left;
   }
 
   .contenedorpinoceldader{
     height: 200px;
-    width: 130px;
+    width: 300px;
+    float: right;
+  }
+
+  .pinoceldader{
     float: left;
   }
 
@@ -381,7 +385,11 @@
   .contenedorpinoceldader{
     height: 200px;
     width: 130px;
-    float: left;
+    float: right;
+  }
+
+  .pinoceldader{
+    float: right;
   }
 
   .pinorect2{
@@ -442,14 +450,15 @@
   .contenedorpinoceldader{
     height: 500px;
     width: 400px;
-    float: left;
+    float: right;
+  }
+
+  .pinoceldader{
+    float: right;
   }
 
   .pinorect2{
     height: 500px;
   }
 
-  .pinoiconder{
-    float: right;
-  }
 }
