--- a/css/pino.css
+++ b/css/pino.css
@@ -244,6 +244,14 @@
   font-size: 20px;
   padding-top: 10px;
 }
+
+.material-icons{
+  color: white;
+}
+
+.material-icons:hover{
+  color: green;
+}
 /*
 @media screen and (max-width: 1200px){
   .pinotransp{
