--- a/css/pino.css
+++ b/css/pino.css
@@ -221,8 +221,8 @@
   height: 50px;
   width: 50px;
   float: left;
-  padding-right: 20px;
-  margin-left: 10px;
+  padding-right: 10px;
+  margin-right: 10px;
   margin-bottom: 10px;
   font-family: Tahoma, Geneva, sans-serif;
 }
@@ -247,6 +247,9 @@
 
 .material-icons{
   color: white;
+  background: #c0c0c0;
+  padding:15px;
+  border-radius: 50%;
 }
 
 .material-icons:hover{
